--- a/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/site.vm
+++ b/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/site.vm
@@ -123,9 +123,22 @@
             <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script>
 <![endif]-->
 
+        <script>
+            if (typeof Handlebars == 'undefined') {
+                document.write('\x3Cscript src="${pageWebjarsPath}handlebars/4.0.5/handlebars.runtime.min.js$!{portalCDNQuery}">\x3C/script>');
+            }
+        </script>
+        <script src="/library/templates.js$!{portalCDNQuery}"></script>
         <script src="${pageScriptPath}trimpath-template-latest.js$!{portalCDNQuery}"></script>
         <script src="${pageScriptPath}jquery/bgiframe/jquery.bgiframe.min.js$!{portalCDNQuery}"></script>
         <script src="${pageScriptPath}jquery/cluetip/1.2.10/jquery.cluetip.min.js$!{portalCDNQuery}"></script>
+        <script>
+            if (jQuery.i18n == 'undefined') {
+                document.write('\x3Cscript src="/library/webjars/jquery-i18n-properties/1.2.2/jquery.i18n.properties.min.js$!{portalCDNQuery}">\x3C/script>');
+            }
+        </script>
+        <script src="/library/js/jquery/jquery.clearsearch.js$!{portalCDNQuery}"></script>
+        <script src="/library/js/profile-popup.js$!{portalCDNQuery}"></script>
         <script src="${pageSkinRepo}/${pageSkin}/js/morpheus.plugins.min.js$!{portalCDNQuery}"></script>
         <script src="${pageSkinRepo}/${pageSkin}/js/morpheus.scripts.min.js$!{portalCDNQuery}"></script>
         <script src="${pageWebjarsPath}/pnotify/2.1.0/pnotify.core.min.js$!{portalCDNQuery}"></script>
@@ -245,5 +258,6 @@
             </div>
         </div>
 
+        #parse("/vm/morpheus/connection-manager.vm")
     </body>
 </html>
