--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -219,7 +219,7 @@
             </div>
         </script>
         <script id="studentCellTemplate" type="text/template">
-            <div class="relative">
+            <div class="gb-student-cell">
                 <div class="gb-value">
                     <div class="rowHeader">
                         <a href="javascript:void(0);" class="gb-view-grade-summary" tabindex="-1">
