--- a/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
@@ -16,9 +16,11 @@
 }
 #gradeTableWrapper td {
   text-align: center;
+  vertical-align: middle;
 }
 #gradeTableWrapper tbody th {
   text-align: left;
+  vertical-align: middle;
 }
 #gradeTableWrapper .handsontableInputHolder {
   text-align: center;
@@ -77,8 +79,21 @@
 #gradeTableWrapper tbody td .relative {
   height: 100%;
   min-height: 30px;
-  height: 30px;
 }
+#gradeTableWrapper tbody td .gb-student-cell {
+  white-space: normal;
+  word-break: break-word;
+  vertical-align: middle;
+}
+#gradeTableWrapper tbody td .gb-student-cell .gb-value {
+  line-height: 1.2em;
+  padding-left: 3px;
+}
+#gradeTableWrapper tbody td .gb-student-cell .gb-view-grade-summary {
+  display: block;
+  font-weight: normal;
+}
+
 #gradeTableWrapper .currentCol,
 #gradeTableWrapper .currentRow,
 #gradeTableWrapper .currentCol .relative,
