--- a/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
+++ b/gradebookng/tool/src/java/org/sakaiproject/gradebookng/tool/component/GbGradeTable.html
@@ -66,8 +66,9 @@
                           wicket:message="title:label.gradeitem.externalapplabel">
                     </span>
                 {/if}
-                <a class="gb-title">
-                    ${title}
+                {var tooltip = title.replace(/"/g, '&quot;')}
+                <a class="gb-title" title="${tooltip}">
+                    ${abbrevTitle}
                 </a>
                 {if settings.isCategoriesEnabled}
                     {if categoryId}
