SAK-32589 - Assignments / points not displayed to students
Assignments / points not displayed to students

--- a/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
+++ b/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_student_view_submission.vm
@@ -267,6 +267,7 @@ $(document).ready(function(){
 							</div>
 						</div>
 					</div>
+				#else
 					<div class="row">
 						<div class="col-lg-4 col-sm-6 col-xs-12">
 							<div class="itemSummaryHeader">$tlang.getString("gen.grasca")</div>
