--- a/commons/tool/src/webapp/WEB-INF/templates/inplace_comment_editor.hbs
+++ b/commons/tool/src/webapp/WEB-INF/templates/inplace_comment_editor.hbs
@@ -2,7 +2,7 @@
 <div class="commons-editor-text-wrapper">
     <div class="commons-editor-text commons-comment-editor-text" data-post-id="{{id}}"><textarea id="commons-comment-textarea-{{id}}" class="commons-comment-textarea" data-post-id="{{id}}"></textarea></div>
     <div id="commons-comment-post-buttons-{{id}}">
-        <button id="commons-inplace-comment-editor-post-button-{{id}}">{{translate 'post_comment'}}</button>
-        <button id="commons-inplace-comment-editor-cancel-button-{{id}}">{{translate 'cancel'}}</button>
+        <button id="commons-inplace-comment-editor-post-button-{{id}}">{{tr 'commons' 'post_comment'}}</button>
+        <button id="commons-inplace-comment-editor-cancel-button-{{id}}">{{tr 'commons' 'cancel'}}</button>
     </div>
 </div>
