SAK-32660 Moved Roster2 to use portal.i18n library

--- a/roster2/src/handlebars/enrollment_header.handlebars
+++ b/roster2/src/handlebars/enrollment_header.handlebars
@@ -2,11 +2,11 @@
 	<tbody>
 		<tr>
 			<td class="rosterPageHeaderLeft">
-				<h3>{{translate 'title_status'}}: {{siteTitle}}</h3>
+				<h3>{{tr 'roster' 'title_status'}}: {{siteTitle}}</h3>
 			</td>
 			<td class="rosterPageHeaderRight">
-				<input id="export_button" type="button" value="{{translate 'export_roster'}}"/>
-				<input type="button" value="{{translate 'print_roster'}}" onclick="window.print()" />
+				<input id="export_button" type="button" value="{{tr 'roster' 'export_roster'}}"/>
+				<input type="button" value="{{tr 'roster' 'print_roster'}}" onclick="window.print()" />
 			</td>
 		</tr>
 	</tbody>
