--- a/roster2/src/handlebars/enrollment_overview.handlebars
+++ b/roster2/src/handlebars/enrollment_overview.handlebars
@@ -1,9 +1,9 @@
 {{#if displayTitleMsg}}
-	<span class="instruction rosterTitleMessage">{{translate 'title_msg'}}</span>
+	<span class="instruction rosterTitleMessage">{{tr 'roster' 'title_msg'}}</span>
 {{/if}}
 <div id="roster-filters">
     <div class="form-group" id="roster-set-selector-wrapper">
-        <label for="roster-enrollmentset-selector" class="form-control-label">{{translate 'enrollment_set_filter_label'}}</label>
+        <label for="roster-enrollmentset-selector" class="form-control-label">{{tr 'roster' 'enrollment_set_filter_label'}}</label>
         <div>
             <select id="roster-enrollmentset-selector">
                 {{#each enrollmentSets}}
@@ -13,26 +13,26 @@
         </div>
     </div>
     <div class="form-group" id="roster-status-selector-wrapper">
-        <label for="roster-status-selector" class="form-control-label">{{translate 'enrollment_status_filter_label'}}</label>
+        <label for="roster-status-selector" class="form-control-label">{{tr 'roster' 'enrollment_status_filter_label'}}</label>
         <div class="roster-table-cell">
             <select id="roster-status-selector">
-                <option selected="selected" value="">{{translate 'roster_enrollment_status_all'}}</option>
+                <option selected="selected" value="">{{tr 'roster' 'roster_enrollment_status_all'}}</option>
                 {{#each enrollmentStatusCodes}}
                     <option value="{{@key}}">{{this}}</option>
                 {{/each}}
             </select>
         </div>
     </div>
-    <button id="roster-export-button" title="{{translate 'navbar_export_tooltip'}}">{{translate 'navbar_export'}}</button>
+    <button id="roster-export-button" title="{{tr 'roster' 'navbar_export_tooltip'}}">{{tr 'roster' 'navbar_export'}}</button>
 </div>
 
 <div id="roster-search-group">
     <div class="form-group">
-        <label for="roster-search-field" class="form-control-label">{{translate 'roster_search_text'}}</label>
+        <label for="roster-search-field" class="form-control-label">{{tr 'roster' 'roster_search_text'}}</label>
         <div>
             <input id="roster-search-field" type="text" value="{{#if searchQuery}}{{searchQuery}}{{/if}}" />
-            <input id="roster-search-button" class="active" type="button" value="{{translate 'roster_search_button'}}" />
-            <input id="roster_form_clear_button" type="button" value="{{translate 'roster_clear_button'}}" />		
+            <input id="roster-search-button" class="active" type="button" value="{{tr 'roster' 'roster_search_button'}}" />
+            <input id="roster_form_clear_button" type="button" value="{{tr 'roster' 'roster_clear_button'}}" />		
         </div>	
      </div>
 </div>
@@ -43,14 +43,14 @@
         <div class="form-group">
             <div class="radio">
                 <label style="margin-right: 1em;">
-                    <input style="margin-right: 0.5em;" type="radio" name="roster_picture_type" value="official" id="roster_official_picture_button" {{#if roster.rosterOfficialPictureMode}}checked{{/if}}/><span>{{translate 'roster_show_official_pictures'}}</span>
+                    <input style="margin-right: 0.5em;" type="radio" name="roster_picture_type" value="official" id="roster_official_picture_button" {{#if roster.rosterOfficialPictureMode}}checked{{/if}}/><span>{{tr 'roster' 'roster_show_official_pictures'}}</span>
                 </label>
             </div>
         </div>
         <div class="form-group">
             <div class="radio">
                 <label style="margin-right: 1em;">
-                    <input style="margin-right: 0.5em;" type="radio" name="roster_picture_type" value="profile" id="roster_profile_picture_button" {{#unless roster.rosterOfficialPictureMode}}checked{{/unless}}/><span>{{translate 'roster_show_profile_pictures'}}</span>
+                    <input style="margin-right: 0.5em;" type="radio" name="roster_picture_type" value="profile" id="roster_profile_picture_button" {{#unless roster.rosterOfficialPictureMode}}checked{{/unless}}/><span>{{tr 'roster' 'roster_show_profile_pictures'}}</span>
                 </label>
             </div>
         </div>
@@ -59,10 +59,10 @@
 </div>
 <div class="row">
     <div class="form-group col-sm-6">
-        <button class="roster-print-button">{{translate 'print_roster'}}</button>
+        <button class="roster-print-button">{{tr 'roster' 'print_roster'}}</button>
         <label id="roster-pictures-only-label">
             <input type="checkbox" id="roster-pictures-only-button" />
-            {{translate 'pictures_only'}}
+            {{tr 'roster' 'pictures_only'}}
         </label>
     </div>
 </div>
@@ -70,6 +70,6 @@
 <div id="roster-loading-image"><img src="/sakai-roster2-tool/images/ajax-loader.gif" /></div>
 <div class="row">
     <div class="form-group col-sm-6">
-        <button class="roster-print-button">{{translate 'print_roster'}}</button>
+        <button class="roster-print-button">{{tr 'roster' 'print_roster'}}</button>
     </div>
 </div>
