--- a/roster2/src/handlebars/members.handlebars
+++ b/roster2/src/handlebars/members.handlebars
@@ -5,7 +5,7 @@
         {{#if ../viewProfile}}
             <a href="javascript:;" class="profile" data-user-id="{{userId}}">
         {{/if}}
-        <img class="roster-picture" src="{{profileImageUrl}}" title="{{translate 'profile_picture_alt'}} alt="{{translate 'profile_picture_alt'}} {{displayName}}" />
+        <img class="roster-picture" src="{{profileImageUrl}}" title="{{tr 'roster' 'profile_picture_alt'}} alt="{{tr 'roster' 'profile_picture_alt'}} {{displayName}}" />
         {{#if ../viewProfile}}
             </a>
         {{/if}}
@@ -14,7 +14,7 @@
 
     {{#unless ../hideNames}}
         <div class="roster-table-cell roster-name-cell">
-            <div class="roster-mobile-label">{{translate 'facet_name'}}</div>
+            <div class="roster-mobile-label">{{tr 'roster' 'facet_name'}}</div>
         {{#if ../../viewProfile}}
             <a href="javascript:;" class="profile" data-user-id="{{userId}}">
         {{/if}}
@@ -27,7 +27,7 @@
 
     {{#if ../viewUserDisplayId}}
         <div class="roster-table-cell">
-        <div class="roster-mobile-label">{{translate 'facet_userId'}}</div>
+        <div class="roster-mobile-label">{{tr 'roster' 'facet_userId'}}</div>
         {{#if ../../viewProfile}}
         <a href="javascript:;" class="profile" data-user-id="{{userId}}">
         {{/if}}
@@ -40,16 +40,16 @@
 
     {{#if ../enrollmentsMode}}
         <div class="roster-table-cell">
-            <div class="roster-mobile-label">{{translate 'facet_status'}}</div>
+            <div class="roster-mobile-label">{{tr 'roster' 'facet_status'}}</div>
             {{enrollmentStatusText}}
         </div>
         <div class="roster-table-cell">
-            <div class="roster-mobile-label">{{translate 'facet_credits'}}</div>
+            <div class="roster-mobile-label">{{tr 'roster' 'facet_credits'}}</div>
             {{credits}}
         </div>
     {{else}}
         <div class="roster-table-cell">
-            <div class="roster-mobile-label">{{translate 'facet_role'}}</div>
+            <div class="roster-mobile-label">{{tr 'roster' 'facet_role'}}</div>
             {{role}}
         </div>
     {{/if}}
@@ -57,12 +57,12 @@
     {{#if ../showVisits}}
         {{#if ../../viewSiteVisits}}
         <div class="roster-table-cell">
-            <div class="roster-mobile-label">{{translate 'total_visits'}}</div>
+            <div class="roster-mobile-label">{{tr 'roster' 'total_visits'}}</div>
             {{totalSiteVisits}}
         </div>
             {{#if formattedLastVisitTime}}
         <div class="roster-table-cell">
-            <div class="roster-mobile-label">{{translate 'last_visit'}}</div>
+            <div class="roster-mobile-label">{{tr 'roster' 'last_visit'}}</div>
             {{formattedLastVisitTime}}
         </div>
             {{/if}}
@@ -71,7 +71,7 @@
 
     {{#if ../viewGroup}}
     <div class="roster-table-cell">
-        <div class="roster-mobile-label">{{translate 'facet_groups'}}</div>
+        <div class="roster-mobile-label">{{tr 'roster' 'facet_groups'}}</div>
         {{#if hasGroups}}
             <div class="roster-group-cell">
             {{#each groups}}
@@ -79,15 +79,15 @@
             {{/each}}
             </div>
         {{else}}
-        <span class="roster-no-groups-label">{{translate 'roster_group_ungrouped'}}</span>
+        <span class="roster-no-groups-label">{{tr 'roster' 'roster_group_ungrouped'}}</span>
         {{/if}}
     </div>
     {{/if}}
 
     {{#if ../viewEmail}}
         <div class="roster-table-cell">
-            <div class="roster-mobile-label">{{translate 'facet_email'}}</div>
-            <a href="mailto:{{email}}" title="{{translate 'profile_email'}} {{email}}">{{email}}</a>
+            <div class="roster-mobile-label">{{tr 'roster' 'facet_email'}}</div>
+            <a href="mailto:{{email}}" title="{{tr 'roster' 'profile_email'}} {{email}}">{{email}}</a>
         </div>
     {{/if}}
 
