--- a/roster2/src/handlebars/permissions.handlebars
+++ b/roster2/src/handlebars/permissions.handlebars
@@ -1,9 +1,9 @@
-<h3>{{translate 'title_permissions'}}: {{siteTitle}}</h3>
-<p class="instruction">{{translate 'title_msg_permissions'}}</p>
+<h3>{{tr 'roster' 'title_permissions'}}: {{siteTitle}}</h3>
+<p class="instruction">{{tr 'roster' 'title_msg_permissions'}}</p>
 <table id="roster_permissions_table" class="listHier lines tableList">
     <thead>
         <tr class="listHier">
-            <th style="text-align:center;">{{translate 'permissions_header'}}</th>
+            <th style="text-align:center;">{{tr 'roster' 'permissions_header'}}</th>
             {{#each roles}}
             <th style="text-align:center;">{{name}}</th>
             {{/each}}
@@ -11,63 +11,63 @@
     </thead>
     <tbody>
         <tr>
-            <td align="left">{{translate 'permissions_allmembers'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_allmembers'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewallmembers')}}checked="checked"{{/if}}" id="{{name}}:roster.viewallmembers"/></td>
             {{/each}}
         </tr>
         <tr>
-            <td align="left">{{translate 'permissions_hidden'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_hidden'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewhidden')}}checked="checked"{{/if}}" id="{{name}}:roster.viewhidden"/></td>
             {{/each}}
         </tr>
         <tr>
-	        <td align="left">{{translate 'permissions_groups'}}</td>
+	        <td align="left">{{tr 'roster' 'permissions_groups'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewgroup')}}checked="checked"{{/if}}" id="{{name}}:roster.viewgroup"/></td>
             {{/each}}
         </tr>
         <tr>
-            <td align="left">{{translate 'permissions_enrollment'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_enrollment'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewenrollmentstatus')}}checked="checked"{{/if}}" id="{{name}}:roster.viewenrollmentstatus"/></td>
             {{/each}}
         </tr>
         <tr>
-            <td align="left">{{translate 'permissions_profile'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_profile'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewprofile')}}checked="checked"{{/if}}" id="{{name}}:roster.viewprofile"/></td>
             {{/each}}
         </tr>
         <tr>
-            <td align="left">{{translate 'permissions_email'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_email'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewemail')}}checked="checked"{{/if}}" id="{{name}}:roster.viewemail"/></td>
             {{/each}}
         </tr>
         <tr>
-            <td align="left">{{translate 'permissions_user_properties'}}</td>
+            <td align="left">{{tr 'permissions_user_properties'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewuserproperties')}}checked="checked"{{/if}}" id="{{name}}:roster.viewuserproperties"/></td>
             {{/each}}
         </tr>
         <tr>
-            <td align="left">{{translate 'permissions_photo'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_photo'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewofficialphoto')}}checked="checked"{{/if}}" id="{{name}}:roster.viewofficialphoto"/></td>
             {{/each}}
         </tr>
         {{#if showVisits}}
         <tr>
-            <td align="left">{{translate 'permissions_visits'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_visits'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.viewsitevisits')}}checked="checked"{{/if}}" id="{{name}}:roster.viewsitevisits"/></td>
             {{/each}}
         </tr>
         {{/if}}
         <tr>
-            <td align="left">{{translate 'permissions_export'}}</td>
+            <td align="left">{{tr 'roster' 'permissions_export'}}</td>
             {{#each roles}}
             <td align="center"><input type="checkbox" class="roster_permission_checkbox" {{#if (roleAllowed permission='roster.export')}}checked="checked"{{/if}}" id="{{name}}:roster.export"/></td>
             {{/each}}
@@ -75,6 +75,6 @@
     </tbody>
 </table>
 <div class="act">
-    <input id="roster_permissions_save_button" type="button" class="active" value="{{translate 'roster_save_button'}}"/>
-    <input id="roster_cancel_button" type="button" value="{{translate 'roster_cancel_button'}}"/>
+    <input id="roster_permissions_save_button" type="button" class="active" value="{{tr 'roster' 'roster_save_button'}}"/>
+    <input id="roster_cancel_button" type="button" value="{{tr 'roster' 'roster_cancel_button'}}"/>
 </div>
