--- a/roster2/src/handlebars/search_with_students.handlebars
+++ b/roster2/src/handlebars/search_with_students.handlebars
@@ -3,9 +3,9 @@
 		<tr>
 			<td>
 				<div id="roster_form:search_filter" class="act">
-					<input id="roster_form_search_field" type="text" value="{{translate 'roster_search_text'}}" name="roster_form_search" />
-					<input id="roster_form_search_button" class="active" type="button" value="{{translate 'roster_search_button'}}" name="roster_form:search_button" />
-					<input id="roster_form_clear_button" type="button" value="{{translate 'roster_clear_button'}}" name="roster_form:clear_button" />
+					<input id="roster_form_search_field" type="text" value="{{tr 'roster' 'roster_search_text'}}" name="roster_form_search" />
+					<input id="roster_form_search_button" class="active" type="button" value="{{tr 'roster' 'roster_search_button'}}" name="roster_form:search_button" />
+					<input id="roster_form_clear_button" type="button" value="{{tr 'roster' 'roster_clear_button'}}" name="roster_form:clear_button" />
 				</div>
 			</td>
 			<td>
