LSNBLDR-830 Embedded Announcements and Forum posts in Lesson page don… (#4577)
* LSNBLDR-830 Embedded Announcements and Forum posts in Lesson page don't render correctly.

* LSNBLDR-830 Embedded Announcements and Forum posts in Lesson page don't render correctly.

--- a/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
+++ b/lessonbuilder/tool/src/webapp/css/Simplepagetool.css
@@ -576,6 +576,9 @@ a.edit-link:link, a.edit-link:visited, a.section-merge-link:link, a.section-merg
 .mainList .textbox ul {
 
 }
+.mainList .textbox ul.forumSummaryList, .mainList .textbox ul.announcementSummaryList {
+    display: inherit;
+}
 .mainList div.item .textbox {
 
 }
@@ -1673,6 +1676,7 @@ font-size: 12px;
 
 .forumSummaryItem, .announcementSummaryItem{
  margin-bottom: 10px;
+ display: inline-block;
 }
 
 .itemTitle {
