LSNBLDR-838 Delete button in edit textbox doesn't have confirm dialog

--- a/lessonbuilder/tool/src/webapp/templates/EditPage.html
+++ b/lessonbuilder/tool/src/webapp/templates/EditPage.html
@@ -48,7 +48,7 @@ $(function() {
 
 jQuery(document).ready(function($) {
 	var confirmMsg = document.getElementById('confirmDeleteLangSupp').innerHTML;
-    $('.ConfirmDelete').click(function() {
+    $('.deleteButton').click(function() {
         return confirm(confirmMsg);
     });
 });
