SAK-32725 - Listen for LTI tool page refresh requests

--- a/lessonbuilder/tool/src/webapp/templates/ShowItem.html
+++ b/lessonbuilder/tool/src/webapp/templates/ShowItem.html
@@ -198,6 +198,9 @@ function toggleShortUrlOutput(defaultUrl, checkbox, textbox) {
 					document.getElementById(idval).height = height;
 					console.log('Reveived lti.frameResize height='+height);
 				}
+				else if ( message.subject == 'lti.pageRefresh' ) {
+                                        location.reload(true);
+				}
 			} catch (error) {
 				console.log('lti.frameResize of '+idval+' failed height='+height);
 				console.log(e.data);
