SAK-32738 - Adding userType and userRole to portal variables

--- a/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includeStandardHead.vm
+++ b/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includeStandardHead.vm
@@ -51,7 +51,9 @@
                 "locale": "$!{locale}",
                 "user": {
                     "id": "$!{userId}",
-                    "eid": "$!{userEid}"
+                    "eid": "$!{userEid}",
+                    "userType": "$!{userType}",
+                    "siteRole": "$!{userSiteRole}"
                 },
                 "timeoutDialog" : {
                 "enabled": $!{timeoutDialogEnabled},
