SAK-18587 - Synoptic tool for assignments

--- a/assignment/assignment-tool/tool/src/webapp/vm/assignment/assignment_macros.vm
+++ b/assignment/assignment-tool/tool/src/webapp/vm/assignment/assignment_macros.vm
@@ -265,4 +265,8 @@
         #end
     </ul>
 #end
+#macro (toolDirectParam $toolLinkJunk $toolLinkAction $toolLinkQuery $toolLinkSite $portalUrl)
+    $portalUrl/directtool/sakai.assignment.grades?sakai.site=$toolLinkSite&panel=Main&$toolLinkQuery&sakai_action=$toolLinkAction
+#end
+
 <!-- end:  assignment_macros.vm -->
