SAK-33240 - Support for portal to expose the editor type for ckeditor

--- a/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includeStandardHead.vm
+++ b/portal/portal-render-engine-impl/impl/src/webapp/vm/morpheus/includeStandardHead.vm
@@ -49,6 +49,9 @@
                     "sitenav": false // This is not allowed in morpheus
                 },
                 "pageScriptPath" : "$!{pageScriptPath}",
+                "editor" : {
+                    "type": "$!{editorType}",
+                },
                 "portalCDNQuery" : "$!{portalCDNQuery}"
             };
         </script>
