LSNBLDR-829 Refactor calendar event types and fix lessons pop-up issues. With changes following Matthew's feedback.

--- a/lessonbuilder/tool/src/webapp/templates/ShowPage.html
+++ b/lessonbuilder/tool/src/webapp/templates/ShowPage.html
@@ -2239,7 +2239,7 @@
 			<label rsf:id="msg=simplepage.endTime" for="endTime"></label>
 			<span id="endTime"></span><br/><br/>
 			<label rsf:id="msg=simplepage.eventType" for="event-type"></label>
-			<img id="event-type-icon"/><span id="event-type"></span><br/><br/>
+			<span id="event-type-icon"></span><span id="event-type"></span><br/><br/>
 			<label rsf:id="msg=simplepage.description" for="event-description"></label>
 			<span id="event-description"></span><br/><br/>
 			<label rsf:id="msg=simplepage.siteName" for="site-name"></label>
