--- a/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_preview_assignment.vm
+++ b/assignment/assignment-tool/tool/src/webapp/vm/assignment/chef_assignments_instructor_preview_assignment.vm
@@ -124,7 +124,7 @@
 									</th>
 									<td>
 										## if honor pledge is required
-										#if ($value_CheckAddHonorPledge!= "1")
+										#if ($value_CheckAddHonorPledge)
 											$tlang.getString("gen.required")
 										#else
 											$tlang.getString("gen.notrequired")
@@ -318,7 +318,7 @@
 							</div>
 						#end
 						## if honor pledge is required
-						#if ($value_CheckAddHonorPledge!="1")
+						#if ($value_CheckAddHonorPledge)
 							<p class="checkbox">$honor_pledge_text<input name="Yes" id="yes" type="checkbox" value="" disabled="disabled" /><label for="yes"> $tlang.getString("gen.yes")</label>
 							<br />$tlang.getString("gen.youmus")</p>
 						#end
